--- a/publisher/kubernetes/publisher_deploy.yaml
+++ b/publisher/kubernetes/publisher_deploy.yaml
@@ -19,6 +19,7 @@ spec:
           imagePullPolicy: Never
           ports:
           - containerPort: 8080
+          - containerPort: 5701
 ---
 apiVersion: v1
 kind: Service
